[package]
name = "pgn-lexer"
version = "0.1.0"
authors = ["Lakin Wecker <lakin@structuredabstraction.com>"]
description = "A lexer for PGN files for chess. Provides an iterator over the tokens from a byte stream."
# documentation = "..."
# homepage = "..."
repository = "https://github.com/lakinwecker/pgn-lexer"
readme = "README.md"
keywords = ["chess", "pgn", "lexer", "tokenizer"]
categories = ["parser-implementations"]
license = " GPL-3.0"


[dependencies]
lazy_static = "*"
regex = "^0.2"
memmap = "0.5.2"

[dependencies.nom]
version = "^3.2"
features = ["regexp", "regexp_macros"]
