[package]
name = "pgn-lexer"
version = "0.1.1"
authors = ["Lakin Wecker <lakin@structuredabstraction.com>"]
description = "A lexer for PGN files for chess. Provides an iterator over the tokens from a byte stream."
# documentation = "..."
# homepage = "..."
repository = "https://github.com/lakinwecker/pgn-lexer"
readme = "README.md"
keywords = ["chess", "pgn", "lexer", "tokenizer"]
categories = ["parser-implementations"]
license = " GPL-3.0"
exclude = ["examples/*"]


[dependencies]
lazy_static = "^0.2"

[dependencies.nom]
version = "^3.2"
features = []

[dev-dependencies]
memmap = "0.5.2"
clap = "2.26.0"
